--- a/cssGrid/basics.css
+++ b/cssGrid/basics.css
@@ -58,3 +58,38 @@ html, body {
 .container2 > div:nth-child(4n) {
       background-color: #ffcc5c;
 }
+
+/*container 3 grid auto fit*/
+
+.container3 > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+  color: #ffeead;
+  border: 1px solid black;
+}
+
+.container3 > div:nth-child(1n) {
+  background-color: #96ceb4;	
+}
+
+.container3 > div:nth-child(3n) {
+  background-color: #88d8b0;
+}
+
+.container3 > div:nth-child(2n) {
+      background-color: #ff6f69;
+}
+
+.container3 > div:nth-child(4n) {
+      background-color: #ffcc5c;
+}
+
+.container3 {
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-rows: repeat(2, 100px);
+  grid-auto-rows: 100px;
+}
